--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: Psychi Innovation at ICL & UCL  
+description: We are at the forefront of the Science and Leadership of Innovation 
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
